fixed new fonts based on user feedback for readability.

--- a/public/css/pioneer_style.css
+++ b/public/css/pioneer_style.css
@@ -301,9 +301,9 @@ footer .logo {
 
 h1 {
   position: relative;
-  font-family: "Cabin Sketch", cursive !important;
+  font-family: 'Koulen', cursive;
   color: black;
-  font-size: 5rem !important;
+  font-size: 5.5rem !important;
   text-align: center;
   margin: 50% auto;
 }
@@ -323,10 +323,10 @@ h1 {
 }
 
 p {
-  font-family: "Bacasime Antique", serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 2rem;
-  text-align: center;
-  font-weight: 400;
+ text-align: center !important;
+  font-weight: 500;
   color: black;
 }
 
@@ -373,11 +373,11 @@ h1 {
 
 h2 {
   position: relative;
-  font-family: "Cabin Sketch", cursive !important;
+  font-family: 'Staatliches', cursive;
   color: black;
   font-size: 2.5rem !important;
   text-align: center;
-  font-weight: 700;
+
 }
 
 /* Start Styling of the pioneer container - which includes the pioneer name, image and description*/
